apps/netbox/deployment-dragonfly.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: netbox
  name: dragonfly
  labels:
    app.kubernetes.io/name: dragonfly
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dragonfly
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dragonfly
    spec:
      containers:
        - name: dragonfly
          image: ghcr.io/dragonflydb/dragonfly:v1.27.2@sha256:df160a92b7097a1d7f673facebd20a74b03c287fb7503b55380b2931d9faf120
          imagePullPolicy: Always
          args:
            - --alsologtostderr
          livenessProbe:
            exec:
              command:
              - /bin/sh
              - /usr/local/bin/healthcheck.sh
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - containerPort: 6379
              name: dragonfly
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - /usr/local/bin/healthcheck.sh
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              cpu: 600m
              memory: 750Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10502
            runAsGroup: 10502
            fsGroup: 10502
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
