apps/netbox/service-netbox-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: netbox
  name: netbox-redis
  labels:
    app.kubernetes.io/name: dragonfly
spec:
  ports:
    - name: dragonfly
      port: 6379
      protocol: TCP
      targetPort: dragonfly
  selector:
    app.kubernetes.io/name: dragonfly
  type: ClusterIP
