apps/netbox/httproute-netbox.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: netbox
  name: netbox
spec:
  parentRefs:
    - namespace: gateway
      name: jdmarble-net
  hostnames:
    - "netbox.jdmarble.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: netbox
          port: 80
